--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="col-lg-6 ps-xl-5 mb-5 mb-lg-0">
                         <div class="home-intro">
                             <h6>👋 Bonjour, je suis</h6>
-                            <h1>Dikra <span><img src="assets/img/mask.jpg" title="" alt=""></span>Ben Allel</h1>
+                            <h1>Dikra <span><img src="assets/img/mask.png" title="" alt=""></span>Ben Allel</h1>
                             <h2>Je suis <span id="type-it"></span></h2>
                             <p class="pe-lg-5">Étudiante en programmation au BTS SIO option SLAM, je suis passionnée et toujours en quête d'apprentissage !  </p>
                             <div class="btn-bar">
@@ -533,7 +533,7 @@
         <div class="container">
             <div class="footer-info">
                 <div class="footer-avatar">
-                    <img src="assets/img/mask.jpg" title="" alt="">
+                    <img src="assets/img/mask.png" title="" alt="">
                 </div>
                 <h6>Dikra Ben Allel</h6>
             </div>
