--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
                         <div class="home-intro">
                             <h6>👋 Bonjour, je suis</h6>
                             <h1>Dikra <span><img src="assets/img/mask.png" title="" alt=""></span>Ben Allel</h1>
-                            <h2>Je suis <span id="type-it"></span></h2>
+                            <div class="container1">
+                                <h2 class="text1 sec-text">Étudiante👋</h2>
+                            </div>
+                            
                             <p class="pe-lg-5">Étudiante en programmation au BTS SIO option SLAM, je suis passionnée et toujours en quête d'apprentissage !  </p>
                             <div class="btn-bar">
                                 <a download class="px-btn px-btn-theme" href="CV Dikra Ben Allel.pdf">Télécharger mon cv <i class="bi-download"></i> </a>
@@ -482,8 +485,8 @@
                     <div class="col-lg-7 ps-xl-5">
                         <div class="contact-form">
                             <div class="contact-head">
-                                <h4>Got Ideas? We've got the skills. Let's team up.</h4>
-                                <p>Tell us more about yourself and what you're got in mind.</p>
+                                <h4>Des questions? Je suis à votre disposition pour cela.</h4>
+                                <p>Dites moi tout ce qui vous passe par l'esprit.</p>
                             </div>
                             <form id="contact-form" method="POST" action="https://formspree.io/f/xyyaaqre">
                                 <div class="row gx-3 gy-4">
@@ -553,10 +556,12 @@
         </div>
     </footer>
     <!-- End Footer -->
+
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/vendor/appear/jquery.appear.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/one-page/scrollIt.min.js"></script>
+    <script src="assets/js/type.js"></script>
     <script src="assets/js/custom.js"></script>
     <!-- end -->
 </body>
