--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- title -->
     <title>Portfolio Dikra</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/logo-d.png">
     <!-- theme css -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <link href="assets/colors/color-1.css" rel="stylesheet" />
@@ -29,8 +29,8 @@
             <!-- Brand -->
             <div class="logo">
                 <a class="navbar-brand" href="#">
-                    <img class="logo-dark" title="" alt="" src="assets/img/logo.svg">
-                    <img class="logo-light" title="" alt="" src="assets/img/logo-light.svg">
+                    <img class="logo-dark" title="" alt="" src="assets/img/logo.png">
+                    <img class="logo-light" title="" alt="" src="assets/img/logo.png">
                 </a>
             </div>
             <div class="ms-auto">
@@ -45,8 +45,8 @@
         <!-- Brand -->
         <div class="logo">
             <a class="navbar-brand" href="#">
-                <img class="logo-dark" title="" alt="" src="assets/img/logo.svg">
-                <img class="logo-light" title="" alt="" src="assets/img/logo-light.svg">
+                <img class="logo-dark" title="" alt="" src="assets/img/logo.png">
+                <img class="logo-light" title="" alt="" src="assets/img/logo.png">
             </a>
         </div>
         <!-- / -->
