--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <a
                     download
                     class="px-btn px-btn-theme"
-                    href="CV Dikra Ben Allel (2) (1).pdf"
+                    href="CV Dikra Ben Allel.pdf"
                     >Télécharger mon cv <i class="bi-download"></i>
                   </a>
                 </div>
@@ -312,7 +312,7 @@
                           <div class="a-text">
                             <a
                               class="text-reset stretched-link"
-                              href="CV Dikra Ben Allel (2) (1).pdf"
+                              href="CV Dikra Ben Allel.pdf"
                               >Mon CV</a
                             >
                           </div>
@@ -726,7 +726,7 @@
             ></a>
           </li>
           <li>
-            <a href="CV Dikra Ben Allel (2) (1).pdf"
+            <a href="CV Dikra Ben Allel.pdf"
               ><i class="fa-solid fa-file-pdf"></i
             ></a>
           </li>
